DEAL-4147 fix with arrows on tablets

--- a/Client/DealnetPortal.Web/Content/less/components/table-reports.less
+++ b/Client/DealnetPortal.Web/Content/less/components/table-reports.less
@@ -72,6 +72,10 @@ td.contract-cell:after {
         margin-top: -15px;
     }
 
+    @media @tablet-up {
+        margin-top: -15px;
+    }
+
     @media @mobile {
         margin-top: -1px;
     }
